<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#3DABD0">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:hint="@string/Username"
        android:inputType="number"
        android:paddingLeft="6dp"
        android:textColor="#fff"
        android:textColorHighlight="#3DABD0"
        android:textColorHint="#B7FFFFFF"
        android:textColorLink="#3DABD0"
        android:visibility="visible"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="6dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColor="#fff"
        android:textColorHighlight="#3DABD0"
        android:textColorHint="#B7FFFFFF"
        android:textColorLink="#3DABD0"
        android:visibility="visible"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:background="@drawable/border_radius"
        android:text="@string/Login"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_register"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/Register"/>

    </LinearLayout>
</LinearLayout>